# TheSessionEvo

./: .gitignore  DATA.md  README.md  README_DATA.md  pyproject.toml
Src/: global_variables.py  key_mode_finder.py  load_tunes.py  main_figs.py  onset_align.py  optimize_parameters.py  part_alignments.py  part_separation.py  run_main.py  run_pipeline.py  savage.py  seq_align.py  seq_io.py  si_figs.py  start_ipython.py  substitution_matrix.py  tune_parser.py  utils.py
Src/protein_conservation/: ca_distance_matrix.py  compute_rsa_pipeline.py  protein_conservation_pipeline.py
Src/thesession/: __init__.py  config.py  utils.py
Src/thesession/alignment/: __init__.py  onset.py  pairwise.py  parts.py
Src/thesession/analysis/: __init__.py  evaluation.py  key_mode.py  optimization.py  substitution.py
Src/thesession/io/: __init__.py  pyabc.py  savage_loader.py  seq_io.py  tune_loader.py  tune_parser.py
Src/thesession/pipeline/: __init__.py  covariance.py  fig1.py  fig2.py  fig3.py  fig4.py  fig5.py  identification.py  mmseqs.py  mutability.py  param_search.py  position.py  protein.py  substitution.py
Src/thesession/protein/: __init__.py  conservation.py  structure.py  utils.py
Src/thesession/structure/: __init__.py  part_separation.py
Src/thesession/viz/: __init__.py  main_figs.py  si_figs.py
notebooks/: 01_tier1_reproduce_figures.ipynb  02_tier2_rerun_analysis.ipynb  03_tier3_full_pipeline.ipynb
scripts/: build_zenodo.sh  download_data.py  fetch_data.py
