[project]
name = "thesession-evo"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
  "music21", "biopython", "pandas", "numpy", "scipy",
  "scikit-learn", "statsmodels", "matplotlib", "seaborn",
  "networkx", "tqdm", "parasail", "openpyxl", "requests",
  # openpyxl: savage .xlsx; parasail: submat viz; requests: protein data fetch (optional leg)
]

[tool.setuptools.packages.find]
where = ["Src"]
